--- a/css/styles.css
+++ b/css/styles.css
@@ -154,11 +154,13 @@ button:focus {
     grid-template-columns: 1fr;
   }
 }
+
 @media all and (min-width: 500px) and (max-width: 750px){
   .grid {
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
@@ -172,11 +174,14 @@ button:focus {
   }
 }
 
-.button, button {
+.button,
+button {
   /* overwrites browser defaults and resets the border */
   border: none;
   display: inline-block;
+
   /* takes the font from the outer container */
+  
   font-family: inherit;
   /* styles the button */
   background-color: var(--lightgreen);
