--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,11 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 16px;
+
   /* Sets the font size to 16px */
+
   line-height: 1.6;
+
   /* Sets the line-height to 1.6 */
 }
 
@@ -39,6 +42,7 @@ a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
 }
+
 a:visited {
   /* visited link */
   color: #05676e;
@@ -48,29 +52,32 @@ a:active {
   /* selected link */
   color: #489c79;
 }
+
 button:hover,
 button:focus {
   border: none;
+
   /* takes the font from the outer container */
+
   font-family: inherit;
-  /* styles the background color, font color, and text decoration (underline, etc.) of the button */
   background-color: black;
   color: red;
   text-decoration: none;
-  /*adds spacing to the button (this will be discussed more in-depth later) */
+
+  /* adds spacing to the button (this will be discussed more in-depth later) */
+
   padding: var(--smallPadding);
   border-radius: 3px;
-  /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
-  /* reduces the opacity of the button to 80% */
   opacity: 0.8;
 }
+
 .button__secondary {
   background-color: #e0b354;
   color: #2b2b2b;
 }
+
 .navigation-list__item--active {
   text-decoration: none;
 }
@@ -155,7 +162,7 @@ button:focus {
   }
 }
 
-@media all and (min-width: 500px) and (max-width: 750px){
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr 1fr;
   }
@@ -165,10 +172,12 @@ button:focus {
   .grid {
     grid-gap: 10px;
   }
-  .grid__item:last-child {
+
+  .grid__item :last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
     font-size: 22px;
   }
@@ -181,15 +190,13 @@ button {
   display: inline-block;
 
   /* takes the font from the outer container */
-  
+
   font-family: inherit;
-  /* styles the button */
   background-color: var(--lightgreen);
   color: white;
   text-decoration: none;
   padding: var(--smallPadding);
   border-radius: 3px;
-  /* width of the border, type, color */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition-duration: 0.2s;
   transition-property: opacity;
@@ -201,24 +208,21 @@ button:focus,
 .button:focus {
   /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
+
   /* reduces the opacity of the button to 80% */
   opacity: 0.8;
 }
 
-.button, button {
-  /* overwrites browser defaults */
-  /* resets the border */
+.button,
+button {
   border: none;
   display: inline-block;
-  /* takes the font from the outer container */
   font-family: inherit;
-  /* style button */
   background-color: var(--lightgreen);
   color: white;
   text-decoration: none;
   padding: var(--smallPadding);
   border-radius: 3px;
-  /* width of the border, type, color */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: opacity 0.2s;
 }
@@ -227,9 +231,11 @@ button:focus,
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
@@ -270,4 +276,3 @@ button:focus,
 .about {
   text-align: center;
 }
-
